--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 	</parent>
 
 
-	<groupId>thompsonStubbs</groupId>
-    <artifactId>addressBook</artifactId>
+	<groupId>Random</groupId>
+    <artifactId>LearningOutcomes</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
